@@ -54,6 +54,9 @@ New Features
 * LUCENE-6303: Added filter caching baked into IndexSearcher and enabled by
   default. (Adrien Grand)
 
+* LUCENE-6304: Added a new MatchNoDocsQuery that matches no documents.
+  (Lee Hinman via Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-6249: StandardQueryParser doesn't support pure negative clauses. 
